--- a/.github/workflows/knit_rmd.yml
+++ b/.github/workflows/knit_rmd.yml
@@ -3,6 +3,7 @@ name: Knit R Markdown
 on:
   schedule:
     - cron: '0 0 * * *'  # Runs every day at midnight UTC
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   knit_rmd:
@@ -17,7 +18,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        Rscript -e 'install.packages("rmarkdown")'
+        Rscript -e 'install.packages("rmarkdown", "tidyverse", "neonUtilities", "remotes")'
+        Rscript -e 'remotes::install_github("eco4cast/neon4cast")'
 
     - name: Knit R Markdown
       run: |
