--- a/.github/workflows/knit_rmd.yml
+++ b/.github/workflows/knit_rmd.yml
@@ -16,10 +16,18 @@ jobs:
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
 
+    - name: Cache R packages
+      uses: actions/cache@v2
+      with:
+        path: ${{ runner.tool_cache }}/R
+        key: ${{ runner.os }}-R-${{ hashFiles('**/DESCRIPTION') }}
+        restore-keys: |
+          ${{ runner.os }}-R-
+
     - name: Install dependencies
       run: |
-        Rscript -e 'install.packages(c("rmarkdown", "tidyverse", "neonUtilities", "remotes"))'
-        Rscript -e 'remotes::install_github("eco4cast/neon4cast")'
+        Rscript -e 'install.packages(c("rmarkdown", "tidyverse", "neonUtilities", "devtools"))'
+        Rscript -e 'devtools::install_github("eco4cast/neon4cast")'
 
     - name: Knit R Markdown
       run: |
