--- a/.github/workflows/knit_rmd.yml
+++ b/.github/workflows/knit_rmd.yml
@@ -26,8 +26,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        Rscript -e 'install.packages(c("rmarkdown", "tidyverse", "neonUtilities", "devtools"))'
-        Rscript -e 'devtools::install_github("eco4cast/neon4cast")'
+        Rscript -e 'install.packages(c("rmarkdown", "tidyverse", "neonUtilities", "remotes"))'
+        Rscript -e 'remotes::install_github("eco4cast/neon4cast")'
 
     - name: Knit R Markdown
       run: |
