Adding .RData files to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .Rhistory
 .RData
 .Ruserdata
+cleaned_data.RData
+combined_factors_noburnin.RData
+combined_factors.RData
+weather_forecast.RData
+.DS_Store
